<resources>
    <string name="app_name">calc</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_Add">+</string>
    <string name="_Subtract">-</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_Equal">=</string>
    <string name="_Multiply">x</string>
    <string name="_Decimal">.</string>
    <string name="_0">0</string>
    <string name="_Divide">/</string>
    <string name="_divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_multiply">*</string>
    <string name="_2">2</string>
    <string name="_subtract">-</string>
    <string name="_3">3</string>
    <string name="_decimal">.</string>
   <string name="clr">CLR</string>
    <string name="_add">+</string>
    <string name="_equal">=</string>
</resources>