<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    tools:context=".MainActivity"
    android:background="#B3E5FC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#FFB3E5FC"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="end|center_vertical"
        android:maxLength="12"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFB3E5FC"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="end|center_vertical"
        android:maxLength="12"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="470dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_goneMarginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_7"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_8"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="casual"
                android:onClick="onDigit"
                android:text="@string/_9"
                android:textSize="24sp"
                android:typeface="normal" />

            <Button
                android:id="@+id/buttonDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/_divide"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_4"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_5"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_6"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/_multiply"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_1"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_2"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_3"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonSubtract"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/_subtract"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonDecimal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDecimalPoint"
                android:text="@string/_decimal"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onDigit"
                android:text="@string/_0"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onClear"
                android:text="@string/clr"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>

            <Button
                android:id="@+id/buttonAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onOperator"
                android:text="@string/_add"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonEqual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onEqual"
                android:text="@string/_equal"
                android:textSize="24sp"
                android:typeface="normal"
                android:fontFamily="casual"/>
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>